--- a/index.html
+++ b/index.html
@@ -420,6 +420,8 @@
       // Examples:
   "Elden Ring": "./imgs/covers/./elden_ring_pc.webp",
   "EA Sports FC 25": "./imgs/covers/./fc25Cover.webp",
+  "Elden Ring: Nightreign": "./imgs/covers/./elden_ring_nightreign_pc.webp",
+  "GTA 5": "./imgs/covers/./gta_v_enhanced_cdkeys.webp",
       // "The Last of Us Part I": "/imgs/covers/tlou_part1.webp",
       // "EA Sports FC 25": "/imgs/covers/fc25.webp",
     };
@@ -458,7 +460,7 @@
        TITLES SOURCE (Top-first list + Annuals)
        ========================================================= */
     const TITLE_BASE = `
-Elden Ring|Elden Ring: Nightreign|Baldur’s Gate 3|Cyberpunk 2077|Red Dead Redemption 2|
+Elden Ring|Elden Ring: Nightreign|Baldur’s Gate 3|Cyberpunk 2077|Red Dead Redemption 2|GTA 5|
 The Witcher 3: Wild Hunt|Assassin’s Creed Shadows|Mafia: The Old Country|Metal Gear Solid Δ: Snake Eater|
 Doom: The Dark Ages|The Elder Scrolls IV: Oblivion Remastered|Death Stranding 2: On the Beach|
 Monster Hunter Wilds|God of War Ragnarök|Marvel’s Spider-Man 2|The Last of Us Part I|The Last of Us Part II
