--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     .nav{ display:grid; grid-template-columns:1fr auto 1fr; align-items:center; width:100% }
     .nav-left{ justify-self:start; display:flex; align-items:center; gap:12px }
     .nav-center{ justify-self:center; display:flex; align-items:center }
-    .nav-right{ justify-self:end; display:flex; align-items:center; gap:10px }
-    .hamburger{ width:28px; height:22px }
+    .nav-right{ display:flex; align-items:center; gap:10px ; justify-content: end; margin-right: 7px;  }
+    .hamburger{ width:28px; height:22px } 
     .logo{ height:26px } /* bigger logo */
 
     .cart-link,.icon-btn, .lang-select{
@@ -72,16 +72,16 @@
     .cart-badge.show{ display:flex }
 
     /* language selector (compact) */
-    .lang-wrap{ display:flex; align-items:center; gap:6px; }
+    .lang-wrap{ display:flex; align-items:center; gap:6px; justify-content: center; margin-left: 1rem  ; }
     .lang-select{
-      background:#20214a; color:#cfd2ff; border:1px solid #2a2b55; border-radius:10px; padding:6px 10px;
+      background:#20214a; color:#cfd2ff; border:1px solid #2a2b55; border-radius:20rem; padding:6px 10px;
       font-size:12px;
     }
 
     /* =========================================================
        APP WRAPPER
        ========================================================= */
-    .app{ margin:0 auto; background:var(--app-bg); min-height:100vh; padding:88px 16px 120px; max-width:430px }
+    .app{ margin:0 auto; background:var(--app-bg); min-height:100vh; padding:78.3px 16px 120px; max-width:430px }
 
     /* =========================================================
        SEARCH
@@ -127,7 +127,7 @@
     .section-title{ font-size:28px; font-weight:700; margin:8px 0 12px }
     .grid{ display:grid; grid-template-columns:1fr 1fr; gap:14px }
 
-    .card{ background:var(--card); border-radius:16px; overflow:hidden; transition:transform .15s ease,background .15s ease }
+    .card{ background:var(--card); border-radius:5px; overflow:hidden; transition:transform .15s ease,background .15s ease }
     .card:hover{ transform:translateY(-2px); background:var(--card-hover) }
 
     .thumb{ position:relative; aspect-ratio:3/4; background:#262557; overflow:hidden; }
@@ -180,12 +180,12 @@
       background:#161741; border-radius:12px; padding:8px; overflow:visible;
     }
     .qty{ display:flex; align-items:center; gap:8px; flex-wrap:wrap; padding:2px; overflow:visible }
-    .qty button{ width:32px; height:32px; border:none; border-radius:8px; background:#282a60; color:#fff; font-weight:500; cursor:pointer }
+    .qty button{ width:22px; height:22px; border:none; border-radius:8px; background:#282a60; color:#fff; font-weight:500; cursor:pointer }
 
     /* ✕ Remove button (icon-only) */
     .remove{
       display:inline-flex; align-items:center; justify-content:center;
-      width:32px; height:32px; border:none; border-radius:8px;
+      width:52px; height:32px; border:none; border-radius:8px;
       background:#ff4d5a; color:#0b1320; font-weight:700; margin-left:8px; cursor:pointer;
       box-shadow:0 1px 0 rgba(0,0,0,.2); position:relative; z-index:1;
     }
@@ -257,6 +257,32 @@
     html[dir="rtl"] .drawer.open{ transform:none; }
     html[dir="rtl"] .qty{ flex-direction:row-reverse }
     html[dir="rtl"] .info{ flex-direction:row-reverse }
+@keyframes pulse {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2); /* how big you want the pulse */
+  }
+}
+
+.back_button {
+  position: fixed;
+  bottom: 40px;
+  right: 20px;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  z-index: 100;
+
+  animation: pulse 1.5s infinite ease-in-out;
+}
   </style>
 </head>
 
@@ -268,7 +294,7 @@
        TOP NAVBAR
        ======================================================= -->
   <header>
-    <nav class="nav">
+    <nav  class="nav">
       <div class="nav-left">
         <button class="icon-btn" id="openMenu" aria-label="Open menu">
           <img class="hamburger" src="./imgs/hamburger.png" alt="">
@@ -422,11 +448,16 @@
       <button class="btn" id="clearCart" type="button" style="background:#2a2b55;color:#fff;" data-i18n="actions.clear">Clear Cart</button>
     </div>
   </aside>
-
+    <!-- =======================================================
+       OVERLAY UP
+       ======================================================= -->
+<div class="back_button">
+  <a href="#home"><img src="./imgs/arrow.png" alt=""></a>
+</div>
   <!-- =======================================================
        MAIN CONTENT
        ======================================================= -->
-  <main class="app">
+  <main id="home" class="app">
     <!-- Search -->
     <div class="search-wrap">
       <input class="search" id="searchInput" type="search" placeholder="Search by title..." data-i18n-ph="search.ph"/>
@@ -933,7 +964,7 @@ Mario Kart World|The Legend of Zelda: Tears of the Kingdom|The Legend of Zelda: 
               <span>${i.qty}</span>
               <button data-act="inc" data-id="${i.id}" aria-label="Increase quantity">+</button>
               <button class="remove" data-act="rm" data-id="${i.id}" aria-label="Remove item">
-                <span aria-hidden="true">✕</span><span class="sr-only">Remove</span>
+                <span aria-hidden="true">x</span><span class="sr-only">Remove</span>
               </button>
             </div>
             <div class="small">${money(i.price)} each</div>
